--- a/templates/latex/thesis.bib
+++ b/templates/latex/thesis.bib
@@ -22,17 +22,50 @@
 }
 
 % 本
-@Book{Chiba2001b,
-  author =	 "千葉 滋",
-  title =	 "GUIライブラリの仕組み",
-  publisher =	 "朝倉書店",
-  year =	 2001,
-  month =	 3
+@book{ 2019fukuchi_book,
+  title     = {図解でわかる! 理工系のためのよい文章の書き方 論文・レポートを自力で書けるようになる方法},
+  author    = {福地 健太郎 and 園山 隆輔},
+  publisher =	{翔泳社},
+  year      = {2019},
+  month     = {2},
 }
 
-% URL(\urlを使えば自動的に折り畳まれる)
-@Misc{Javassist,
-  author = "千葉 滋",
-  title = "Javassist Home Page",
-  howpublished = "\url{http://www.csg.is.titech.ac.jp/~chiba/javassist/index.html}",
+@book { 2018kumazuki_book,
+  author    = {久間月 慧太郎 and 木下 是雄},
+  title     = {まんがでわかる 理科系の作文技術},
+  publisher = {中央公論新社},
+  year      = {2018},
+  month     = {1},
+}
+
+@book { 1981kinoshita_book,
+  author    = {木下 是雄},
+  title     = {理科系の作文技術},
+  publisher = {中央公論新社},
+  year      = {1981},
+  month     = {9},
+}
+
+@book { 2023okumura_book,
+  author    = {奥村 晴彦 and 黒木 裕介},
+  title     = {［改訂第9版］\LaTeX 美文書作成入門},
+  publisher = {技術評論社},
+  year      = {2023},
+  month     = {12},
+}
+
+@book { 2020mizutani_book,
+  author    = {水谷 正大},
+  title     = {\LaTeX 超入門 ゼロからはじめる理系の文書作成術},
+  publisher = {講談社},
+  year      = {2020},
+  month     = {7},
+}
+
+@book { 2016tak_book,
+  author    = {Tak.},
+  title     = {アウトライナー実践入門 ~「書く・考える・生活する」創造的アウトライン・プロセッシングの技術~},
+  publisher = {技術評論社},
+  year      = {2016},
+  month     = {7},
 }
